# fortune-teller

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/: SETUP.md
.github/workflows/: ci.yml
.opencode/: opencode.json
data/parsed/spreads/: celtic-cross.json
docs/: architecture.md
docs/decks/: book-of-thoth.md
opencode/plans/: 0000-overview.md  0001-tooling-and-layout.md  0002-documentation.md  0003-mcp-servers.md  0004-domain-model.md  0005-deck-and-reading-engine.md  0006-scraping-and-parsing.md  0007-embeddings-and-vector-store.md  0008-llm-chains.md  0009-gradio-ui.md  0010-testing-and-quality.md  0011-ci-and-pre-commit.md  0012-github-and-release.md  0013-spike-acceptance.md
src/fortune_teller/: __init__.py
src/fortune_teller/application/: __init__.py  config.py
src/fortune_teller/application/chains/: __init__.py  per_card.py  summary.py
src/fortune_teller/application/models/: domain.py
src/fortune_teller/application/services/: __init__.py  deck.py  loading.py  reading.py  synergy.py
src/fortune_teller/application/stores/: __init__.py  embeddings.py  images.py  sqlite.py  vector.py
src/fortune_teller/application/ui/: __init__.py  app.py  nicegui_app.py
src/fortune_teller/developer/: __init__.py
src/fortune_teller/developer/build_index/: __init__.py  cli.py
src/fortune_teller/developer/embed/: __init__.py  chunker.py  cli.py
src/fortune_teller/developer/fetch_images/: __init__.py  cli.py
src/fortune_teller/developer/fetch_models/: __init__.py  cli.py
src/fortune_teller/developer/normalize/: __init__.py  cli.py  prompts.py  rider_waite.py  thoth.py  thoth_cli.py  umbrella_cli.py
src/fortune_teller/developer/parse/: __init__.py  cli.py  learntarot.py  thothreadings.py
src/fortune_teller/developer/scrape/: __init__.py  cli.py  learntarot.py  thothreadings.py
src/fortune_teller/developer/scrape/seeds/: book_of_thoth.txt  rider_waite.txt
tests/: conftest.py  nicegui_grid_main.py  nicegui_main.py  nicegui_resilience_main.py
tests/fixtures/html/learntarot/: p6.htm  w10.htm
tests/fixtures/html/thothreadings/: 0-the-fool.html  ace-of-wands-blog.html  ace-of-wands.html  i-the-magician.html  spread-new-moon.html  the-fool.html  the-magus.html
tests/fixtures/parsed/book-of-thoth/: 0-the-fool.json  ace-of-wands.json  i-the-magician.json
tests/fixtures/parsed/spreads/: new-moon-three-card.json
tests/integration/: __init__.py  test_reading_pipeline.py  test_vector_store_round_trip.py
tests/screen/: __init__.py  nicegui_screen_celtic_main.py  nicegui_screen_threecard_main.py  test_spread_screenshots.py
tests/unit/: __init__.py  test_build_index_cli.py  test_build_reading_service.py  test_card_images.py  test_chunker.py  test_complex_spreads.py  test_deck_isolation.py  test_deck_session.py  test_domain_models.py  test_embed_cli.py  test_embedder.py  test_fetch_images.py  test_learntarot_parser.py  test_learntarot_scraper.py  test_learntarot_url_map.py  test_loading.py  test_nicegui_app.py  test_normalize_cli.py  test_normalize_prompts.py  test_normalize_rider_waite.py  test_normalize_thoth.py  test_normalize_thoth_cli.py  test_normalize_umbrella_cli.py  test_parse_cli.py  test_parser.py  test_per_card_chain.py  test_prompt_templates.py  test_reading_resilience.py  test_reading_service_history.py  test_scrape_cli.py  test_sqlite_store.py  test_summary_chain.py  test_synergy.py  test_ui_app.py  test_vector_store.py
